--- a/iOStarter/Storyboard/Base.lproj/Example.storyboard
+++ b/iOStarter/Storyboard/Base.lproj/Example.storyboard
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1nJ-ly-bdJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1nJ-ly-bdJ">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Example List-->
         <scene sceneID="4DL-uZ-usl">
             <objects>
-                <viewController storyboardIdentifier="ExampleListVC" id="TkS-0d-6vt" customClass="ExampleListVC" customModule="iOS_Starter" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ExampleListVC" id="TkS-0d-6vt" customClass="ExampleListVC" customModule="iOStarter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Arm-4d-Q29">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bDD-Az-EY0">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="Swo-43-bEZ" style="IBUITableViewCellStyleDefault" id="uwY-UT-wVs" customClass="ExampleCell" customModule="iOS_Starter" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="Swo-43-bEZ" style="IBUITableViewCellStyleDefault" id="uwY-UT-wVs" customClass="ExampleCell" customModule="iOStarter" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uwY-UT-wVs" id="ltv-3S-nYs">
@@ -40,14 +41,14 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="HGS-4u-cb7"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="bDD-Az-EY0" firstAttribute="leading" secondItem="HGS-4u-cb7" secondAttribute="leading" id="8ca-Ka-atL"/>
                             <constraint firstItem="HGS-4u-cb7" firstAttribute="bottom" secondItem="bDD-Az-EY0" secondAttribute="bottom" id="blW-3y-F4p"/>
                             <constraint firstItem="bDD-Az-EY0" firstAttribute="top" secondItem="HGS-4u-cb7" secondAttribute="top" id="dD8-oT-CpA"/>
                             <constraint firstItem="HGS-4u-cb7" firstAttribute="trailing" secondItem="bDD-Az-EY0" secondAttribute="trailing" id="kfm-tV-gaX"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="HGS-4u-cb7"/>
                     </view>
                     <navigationItem key="navigationItem" title="Example List" id="Xkl-H3-Rlm"/>
                     <connections>
@@ -61,7 +62,7 @@
         <!--Example Detail-->
         <scene sceneID="1G5-5a-BzI">
             <objects>
-                <viewController storyboardIdentifier="ExampleDetailVC" id="ooD-ej-TsK" customClass="ExampleDetailVC" customModule="iOS_Starter" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ExampleDetailVC" id="ooD-ej-TsK" customClass="ExampleDetailVC" customModule="iOStarter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Zma-eY-Y4f">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -90,7 +91,8 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="M3E-ky-Mgj"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="oMB-6P-Kmt" firstAttribute="leading" secondItem="M3E-ky-Mgj" secondAttribute="leading" id="8yW-LN-v50"/>
                             <constraint firstItem="oMB-6P-Kmt" firstAttribute="top" secondItem="M3E-ky-Mgj" secondAttribute="top" id="VHh-GY-fVy"/>
@@ -99,7 +101,6 @@
                             <constraint firstItem="M3E-ky-Mgj" firstAttribute="trailing" secondItem="oMB-6P-Kmt" secondAttribute="trailing" id="tbA-0r-PDt"/>
                             <constraint firstItem="r7n-lN-prX" firstAttribute="leading" secondItem="M3E-ky-Mgj" secondAttribute="leading" constant="20" id="vEN-2i-vBu"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="M3E-ky-Mgj"/>
                     </view>
                     <navigationItem key="navigationItem" title="Example Detail" id="tWd-7k-gBi"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
@@ -111,7 +112,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rh4-YU-ptd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="641" y="100"/>
+            <point key="canvasLocation" x="640.57971014492762" y="99.776785714285708"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="BPF-3r-tN2">
@@ -132,4 +133,9 @@
             <point key="canvasLocation" x="-661" y="100"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
